docs/style.css
/* ... */
.hide {
    display: none;
    visibility: hidden;
}

.projectform {
    
    display: flex;
    flex-flow: column;
    height: 100%;
    justify-content: space-between;
}

.redback {
    background-color: rgb(255, 0, 0, 0.16);
 
    border-radius: 10px;
}
.red.redback {
    background-color: lightgray;
}

input.redback {
    border-radius: 0px;
}

.todoform {

    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(4, 1fr);
height: 100%;
width: 100%;
max-width: 100%;
}




.todoform > label {
    font-size: 1.5rem;
    margin: 20px;
}

.submittodo {
    height: min-content;
    

    border-radius: 8px;
    grid-column: 2;
    justify-self: left;
    padding: .5rem;

}
.cancelsubmit {
    
    justify-self: left;
    grid-column: 1;
    grid-row: 4;
    padding: 0.5rem;
    border-radius: 8px;
    text-align: center;
    align-self: flex-start;
}

.todoform > input {
    border-radius: 5px;
    align-self: center;
}



.projflex {
    display: flex;
    justify-content: space-evenly;
    font-family: monospace;
    font-size: 1.2rem;
    align-items: center;

}


.titleinputbar {
    width: 100%;
    
    margin-bottom: .5rem;
    height: 2.5rem;
    font-size: 1.0rem;
}



.inputgrid {
    display: grid;
    grid-template-columns: repeat(1,1fr);
    grid-template-rows: repeat(auto, 1fr);

}

.todoflex {
    border: 2px solid rebeccapurple;
    display: grid;
    grid-template-columns: repeat(1,1fr);
    justify-items: center;
    
height: 8rem;
    width: 90%;
}



.project {

display: flex;
flex-flow: column;
justify-content: space-between;

}
 .project > input {
    align-self: flex-start;
 }



.createnewheading {
    margin: 0;
    margin-bottom: 1.5rem;
    align-self: center;
    font-size: 2rem;
font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

.changebg {
    background-color: rgb(128, 128, 128, 0.7);
   
}

.todoselect, .projectselect {
    margin: 0;
    align-self: center;
    margin-bottom: 20px;
    background-color: lightgray;
    width: auto;
    height: auto;
padding: 10px;
    font-size: 1.4rem;
}
.prioritybox
{
    display: flex;
    justify-content: space-between;
    width: 149px;
    font-weight: bold;
}

.prioritywrapperlow {
    background-color: rgb(0, 128, 0, 0.2);
    display: inline;
}

.prioritywrappermed {
    background-color: rgba(255, 255, 0, 0.2);
    display: inline;
}

.prioritywrapperhigh {
    background-color: rgb(255, 0, 0, 0.5);
    display: inline;
}

.deleteprojectbutton {
    background-color: rgb(240, 128, 128, 0.5);
    font-weight: bold;
    border-radius: 8px;
    border: none;
    width: 1.5rem;
}


.closebuttonbox {
    display: flex;
    justify-content: space-between;
}

.createnewbox {
    display: flex;
    justify-content: space-evenly;
}

.flexforlabel > label, .flexforlabel > input {
margin-bottom: 5px;
}

.flexforlabel {
    width: 100%;
    display: flex;
    align-items: baseline;
    justify-content: space-around;
 
   
}

.submitbutton, .projectsubmit {
margin-top: 20px;
display: inline;
width: 5rem;
height: 4rem;

}

.projectbuttons {
    display: grid;
    grid-template-columns: repeat(2, 1fr);

    justify-items: right;
    margin-bottom: 20px;


    padding: 0px 20px 0px 20px;
}

.todocheckbox {

  flex-basis: 1.4rem;

margin-top: 0;
margin-bottom: 0;
margin-left: 0;
flex-shrink: 0;
 width: 2rem;
 height: 2rem;
}

.prioritywrapperhigh { 
    flex-shrink: 2;
}

.customprojecttitle {
 
    width: 150%;
    overflow: auto;
}



.submitcontainer {
display: flex;
justify-content: center;
}
    
.bigbar
{
    width: 60%;
    height: 2rem;
    font-size: 1.2rem;
}

.titlesection {
    width: 80%;
    overflow: hidden;
    margin-bottom: 0;


}

.timeheader {

    font-size: 1.6rem;
   
    font-weight: normal;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}


.projecttitlelabel {
    font-size: 1.8rem;
   }

   @media screen and (max-width: 900px) {

    .todoheadertext, .todoheaderimage {
        margin-top: 1rem;
      }

    .quickinfo {
        flex-flow: column;
    
      }
    

    .titlesection {
max-width: 13rem;
        
    }
    
.maincontainer {
  
    width: 100vw;

    border-radius: 0;
    overflow-y: auto;

    border: none;
}

.todoheader {
    border-radius: 0;
}

.flexcont {
    border-radius: 0;
}


     

}
/* ... */

